# GaugeMC

./: Cargo.toml
benches/: cpu_bench.rs  cuda_bench.rs  wgpu_bench.rs
examples/: cuda_edges.rs  cuda_foam_snapshot.rs  cuda_markov_loops.rs  example_mc.rs  simple_cpu.rs  simple_cuda.rs  simple_global.rs  simple_gpu.rs  wilson_loop_wandering.rs
jupyter/: LoopFreeEnergy.ipynb  PlotLoops.ipynb  QuadraticLoopFreeEnergy.ipynb  Watch-loops.ipynb  output_distribution_k05.npz  output_distribution_k15.npz  output_loops_nolocal.npz  output_loops_withlocal.npz
src/: cudagraph.rs  dualgraph.rs  gpugraph.rs  lib.rs  localupdates.wgsl  ndarray_dualgraph.rs  shader.wgsl  util.rs
src/kernels/: cuda_kernel.cu  local_updates.cu  shader.wgsl
